# openpose_ros

./: .gitmodules  CMakeLists.txt  README.md  package.xml
launch/: openpose_ros.launch  play_bag_files.launch  run_openpose_remote_machine.launch
memo/: README.md
scripts/: openpose_ros_utility.py  skeleton_number.py  waving_person.py
src/: openpose_ros_node.cpp
